--- a/UpgradeTalk/app/build.gradle
+++ b/UpgradeTalk/app/build.gradle
@@ -32,6 +32,7 @@ repositories {
 }
 dependencies {
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+    implementation 'com.sothree.slidinguppanel:library:3.4.0'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
